--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,11 +6,12 @@ spring:
     password: pass
 
   flyway:
-    schemas: test
+    schemas: app
+    default-schema: app
     locations: classpath:db/migration
   sql:
     init:
-      mode: always
+      mode: never
   jackson:
     default-property-inclusion: NON_EMPTY
 
@@ -18,6 +19,11 @@ server:
   port: 8080
   servlet:
     context-path: /api/v1
+
+mybatis:
+  configuration:
+    map-underscore-to-camel-case: true
+
 
 logging:
   level:
