WIP: 起動しても、叩けない

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -28,5 +28,6 @@ mybatis:
 logging:
   level:
     root: debug
-    kirimaru: trace
-    org.springframework.security: trace
+#    root: info
+#    kirimaru: trace
+#    org.springframework.security: trace
