--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,8 @@ repositories {
 }
 
 ext {
-    set('testcontainersVersion', "1.17.6")
+    testcontainersVersion = "1.17.6"
+    jwtVersion = '0.11.5'
 }
 
 dependencies {
@@ -39,8 +40,24 @@ dependencies {
     implementation 'org.flywaydb:flyway-core'
     runtimeOnly 'org.postgresql:postgresql'
     implementation 'org.springframework.boot:spring-boot-starter-jdbc'
-    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.0'
-    testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.0'
+    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.1'
+    testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.1'
+
+    // WebFlux
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
+
+
+    // JWT認証
+//    implementation "io.jsonwebtoken:jjwt-api:${jwtVersion}"
+//    implementation "io.jsonwebtoken:jjwt-impl:${jwtVersion}"
+//    implementation "io.jsonwebtoken:jjwt-jackson:${jwtVersion}"
+
+    // DBUnit
+    testImplementation 'org.dbunit:dbunit:2.7.3'
+    testImplementation 'com.github.springtestdbunit:spring-test-dbunit:1.3.0'
+
+    // JSON Assert
+    testImplementation 'org.skyscreamer:jsonassert:1.5.1'
 }
 
 dependencyManagement {
