--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,8 @@ ext {
 }
 
 dependencies {
-//    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    testImplementation 'org.springframework.security:spring-security-test'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     compileOnly 'org.projectlombok:lombok'
@@ -48,9 +49,9 @@ dependencies {
 
 
     // JWT認証
-//    implementation "io.jsonwebtoken:jjwt-api:${jwtVersion}"
-//    implementation "io.jsonwebtoken:jjwt-impl:${jwtVersion}"
-//    implementation "io.jsonwebtoken:jjwt-jackson:${jwtVersion}"
+    implementation "io.jsonwebtoken:jjwt-api:${jwtVersion}"
+    implementation "io.jsonwebtoken:jjwt-impl:${jwtVersion}"
+    implementation "io.jsonwebtoken:jjwt-jackson:${jwtVersion}"
 
     // DBUnit
     testImplementation 'org.dbunit:dbunit:2.7.3'
