--- a/build.gradle
+++ b/build.gradle
@@ -45,7 +45,7 @@ dependencies {
     testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.1'
 
     // WebFlux
-    implementation 'org.springframework.boot:spring-boot-starter-webflux'
+//    implementation 'org.springframework.boot:spring-boot-starter-webflux'
 
 
     // JWT認証
