--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
   flyway:
     schemas: app
     default-schema: app
-    locations: classpath:db/migration
+    locations: classpath:db/migration;classpath:db/record
   sql:
     init:
       mode: never
