--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ repositories {
 ext {
     testcontainersVersion = "1.17.6"
     jwtVersion = '0.11.5'
+//    flywayTestVersion = '7.0.0'
 }
 
 dependencies {
@@ -43,6 +44,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-jdbc'
     implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.1'
     testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.1'
+//    testImplementation "org.flywaydb.flyway-test-extensions:flyway-spring-test:${flywayTestVersion}"
+//    testImplementation "org.flywaydb.flyway-test-extensions:flyway-dbunit-test:${flywayTestVersion}"
 
     // WebFlux
 //    implementation 'org.springframework.boot:spring-boot-starter-webflux'
