refactor: 不要なimportを削除

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,6 +16,10 @@ spring:
   jackson:
     default-property-inclusion: NON_EMPTY
 
+  test:
+    database:
+      replace: NONE # ローカルでTestContainersを動かすため
+
 server:
   port: 18080
   servlet:
